agregando parte backend

--- a/client/src/componentes/NavBar/navbar.css
+++ b/client/src/componentes/NavBar/navbar.css
@@ -134,7 +134,10 @@
 .li-link:hover::before{
 
 
-  animation: menu 2s infinite alternate ease;
+  animation: menu 2s alternate ease;
+  right: 0%;
+
+
 }
 
 
