--- a/client/src/NavBar/navbar.css
+++ b/client/src/NavBar/navbar.css
@@ -8,9 +8,8 @@
 }
 
 .links-content {
-  display: fixed;
+  position: fixed;
 
-  position: absolute;
 
   left: calc(100% - 200px);
   bottom: calc(100% - 170px);
@@ -22,6 +21,8 @@
 .circulo {
   width: 100%;
   height: 100%;
+  position: absolute;
+  z-index: 1000000;
 }
 
 .burger-circulo {
@@ -117,6 +118,8 @@
   position: relative;
   
   box-shadow: 9px 9px 35px -8px rgba(0,0,0,0.62);
+  
+  border: 5px solid var(--morado);
 
 
 }
@@ -129,6 +132,9 @@
   0% {
     height: 100%;
     border-radius: 50%;
+  }
+  50%{
+    border: 5px solid var(--rosa);
   }
   100% {
     height: 600px;
