--- a/client/src/paginas/1home/home.css
+++ b/client/src/paginas/1home/home.css
@@ -1,140 +1,227 @@
+.relative {
+  position: relative;
+  width: calc(100% - 20px);
 
-.relative{
-    position: relative;
-    width: calc(100% - 20px);
+  margin: 10px;
 
-    margin: 10px;
+  object-fit: cover;
 
-    object-fit: cover;
+  overflow: hidden;
 
-    overflow: hidden;
-
-    box-sizing: border-box;
-
-    border: 1px solid var(--negro);
-    
-}
-
-.encabezado{
-    position: relative;
-
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-
-    width: 100%;
-    height: 100%;
-}
-
-.encabezado-titulo{
-    position: absolute;
-
-    display: flex;
-    flex-wrap: wrap;
-
-    flex-direction: column-reverse;
-
-    width: 100%;
-    height: 70%;
+  box-sizing: border-box;
 
 }
 
-.encabezado-titulo h2{
+.encabezado {
+  position: relative;
 
-    position: absolute;
-    z-index: 10;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 
-    margin: 0 40px;
-
-    font-size: 50px;
-
-    color: var(--blanco)
-
+  width: 100%;
+  height: 100%;
 }
 
-.encabezado-img{
+.encabezado-titulo {
+  position: absolute;
 
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 
-    width: 100%;
+  flex-direction: column-reverse;
 
+  width: 100%;
+  height: 70%;
 }
 
-.encabezado-img img{
+.encabezado-titulo h2 {
+  position: absolute;
+  z-index: 10;
 
-    width: 100%;
-    object-fit: cover;
-    -webkit-filter: brightness(50%);
-    filter: brightness(50%);
+  margin: 0 40px;
 
+  font-size: 50px;
+
+  color: var(--blanco);
+}
+
+.encabezado-img {
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 100%;
+}
+
+.encabezado-img img {
+  width: 100%;
+  object-fit: cover;
+  -webkit-filter: brightness(50%);
+  filter: brightness(50%);
 }
 
 /*       cuerpo       */
 
-.Cuerpo-top{
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
+.Cuerpo-top {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
 
-    width: 100%;
-    background-color: var(--azul);
+  width: 100%;
+  background-color: var(--azul);
 }
 
-.cuerpo-titulo{
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
+.cuerpo-titulo {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
 
-    justify-items: center;
-    justify-content: center;
-    text-align: center;
+  justify-items: center;
+  justify-content: center;
+  text-align: center;
 
-    width: 100%;
-    height: 200px;
+  width: 100%;
+  height: 200px;
+}
+
+.cuerpo-titulo h2 {
+  display: inline-block;
+  width: auto;
+
+  margin: auto;
+
+  justify-items: center;
+  justify-content: center;
+  text-align: center;
+
+  color: var(--blanco);
+  font-size: 25px;
+}
+
+.cuerpo-Capsulas {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+
+  justify-items: center;
+  justify-content: center;
+  text-align: center;
+
+  margin: auto;
+
+  width: 80%;
+}
+.content-CCapsula {
+  margin: auto;
+  width: 290px;
+  height: 250px;
+
+  border-right: 3px solid var(--rosa);
+  border-bottom: 3px solid var(--rosa);
+  box-shadow: 9px 9px 35px -8px rgba(0, 0, 0, 0.62);
+
+  margin-bottom: 25px;
+  padding: 10px;
 
 }
 
-.cuerpo-titulo h2   {
-
-    display: inline-block;
-    width: auto;
-
-    margin: auto;
-
-    justify-items: center;
-    justify-content: center;
-    text-align: center;
-
-    color: var(--blanco);
-    font-size: 25px;
+.CCapsula-h2 {
+  font-size: 19px;
+  color: var(--morado);
+  font-weight: bold;
 }
 
-.cuerpo-Capsulas{
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-
-    justify-items: center;
-    justify-content: center;
-    text-align: center;
-
-    margin: auto;
-
-    width: 80%;
-
-}
-.content-CCapsula{
-    margin: auto;
-    width: 250px;
-    height: 250px;
-
-    border-right: 3px solid var(--morado);
-    border-bottom: 3px solid var(--morado);
-    box-shadow: 9px 9px 35px -8px rgba(0,0,0,0.62);
-
-    margin-bottom: 25px;
+.CCapsula-PTop,
+.CCapsula-PButton {
+  font-size: 18px;
+  font-weight: bold;
 }
 
 
+.CuerpoButton-p {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
 
+  width: 100%;
+
+  margin: 30px 0;
+
+  
+
+}
+
+
+.CuerpoButton-p p {
+
+  justify-items: center;
+  justify-content: center;
+  text-align: center;
+
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--negro);
+
+  margin: auto;
+
+  padding: 20px;
+
+  border-right: 3px solid var(--morado);
+  border-bottom: 3px solid var(--morado);
+  box-shadow: 9px 9px 35px -8px rgba(0, 0, 0, 0.62);  
+  
+
+}
+
+
+.CuerpoButton-Cimg{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+
+
+  width: 70%;
+
+}
+
+.CuerpoButton-img{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 90%;
+  height: 100%;
+  object-fit: cover;
+  margin: auto;
+
+}
+  
+
+.CuerpoButton-img img{
+  position: relative;
+
+  width: 100%;
+  object-fit: cover;
+
+}
+  
+
+.CuerpoButton-referencia{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+
+  flex-direction: column-reverse;
+
+  max-width: 100%;
+  object-fit: cover;
+
+  flex-direction: row-reverse;
+
+}
+.CuerpoButton-referencia p{
+  margin: 30px;
+  position: relative;
+
+}
