--- a/client/src/paginas/2info/info.css
+++ b/client/src/paginas/2info/info.css
@@ -1,13 +1,30 @@
-.relative {
-  position: relative;
-  width: calc(100% - 20px);
 
-  margin: 10px;
+.info-encabezado-titulo {
+  position: absolute;
+  z-index: 10;
 
-  object-fit: cover;
+  display: flex;
+  flex-wrap: wrap;
 
-  overflow: hidden;
+  flex-direction: column-reverse;
+  margin: auto;
 
-  box-sizing: border-box;
+  width: 100%;
+  height: 70%;
+}
 
+.info-encabezado-titulo h2 {
+  display: flex;
+  flex-wrap: wrap;
+  
+
+  margin: 0 auto;
+
+  font-size: 50px;
+
+  text-align: center;
+  align-items: center;
+  align-content: center;
+
+  color: var(--blanco);
 }
