--- a/client/src/paginas/3ayuda/ayuda.css
+++ b/client/src/paginas/3ayuda/ayuda.css
@@ -1,12 +1,508 @@
-.relative {
+
+.ayuda-titulo{
+  
+  box-sizing: border-box;
   position: relative;
-  width: calc(100% - 20px);
 
-  margin: 10px;
+  display: flex;
+  flex-wrap: wrap;
 
-  object-fit: cover;
+  width: 100%;
+  overflow: hidden;
+
+  margin: auto;
+}
+
+.ayuda-titulo h2{
+
+  box-sizing: border-box;
+  justify-items: center;
+  justify-content: center;
+  text-align: center;
+
+  margin: 50px auto;
+
+  font-size: 30px;
+
+  color: var(--morado);
+  font-weight: bold;
+
+}
+
+
+.contenedor-ultimasDonaciones{
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 80%;
+  height: 600px;
+  overflow: scroll;
+
+  margin: auto;
+  background-color: var(--morado);
+  border-right: 3px solid var(--rosa);
+  border-bottom: 3px solid var(--rosa);
+  box-shadow: 9px 9px 35px -8px rgba(0, 0, 0, 0.62);  
+
+
+}
+
+.contenedor-datos{
+
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  margin: auto;
+  flex-direction: row-reverse;
+
+}
+
+.content-Datos{
+
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 90%;
+  height: 90%;
+  overflow: scroll;
+  background-color: var(--blanco);
+
+  margin: auto;
+
+}
+.datos{
+
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 100%;
+  height: 100px;
+  overflow: scroll;
+
+  margin: 10px auto;
+
+}
+.ul-datos{
+
+  box-sizing: border-box;
+  list-style: none;
+
+  position: relative;
+
+  display: flex;
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  margin: auto;
+
+}
+
+.li-datos{
+
+  list-style: none;
+  box-sizing: border-box;
+
+  position: relative;
+
+  display: flex;
+  
+  width: 33%;
+  height: 100%;
+  overflow: hidden;
+
+  border-left: 2px solid var(--rosa);
+  background-color: var(--azul-o);
+
+}
+.p-datos{
+  margin: auto 5px;
+
+  overflow: scroll;
+}
+
+.ld{
+  background-color: var(--morado);
+  color: var(--blanco);
+}
+
+.ld p{
+  font-weight: bold;
+  margin: auto;
+  font-size: 20px;
+
+}
+
+
+
+
+.btn-actualizar{
+  position: absolute;
+  left: calc(100% - 200px);
+  top: calc(100% - 100px);
+
+  display: flex;
+  flex-wrap: wrap;
 
   overflow: hidden;
 
+  width: 180px;
+  height: 60px;
+
+  margin: auto;
+
+}
+.btn-actualizar button {
+  position: absolute;
+
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  z-index: 20000;
+
+
+  padding: 5px;
+
+  border: 3px solid var(--azul);
+
   box-sizing: border-box;
+
+  font-weight: bold;  
+  background-color: rgba(0, 0, 0, 0);
+
+
+  font-size: 15px;
+
+}
+.btn-actualizar::after {
+  position: absolute;
+  z-index: 0;
+
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: -100%;
+
+  border-radius: 50px;
+
+  padding: 5px;
+
+  border: 3px solid var(--morado);
+  background-color: var(--azul);
+
+  box-sizing: border-box;
+
+  content: '';
+}
+
+.btn-actualizar button:hover {
+  cursor: pointer;
+    color: var(--morado);
+    animation: btn 2s ease;
+    border-radius: 50px;
+}
+
+@keyframes btn{
+
+  0%{
+    border-radius: 0;
+    color: var(--rosa);
+    border-color: var(--rosa)
+  }
+  50%{
+    border-color: var(--rosa)
+
+  }
+  100%{
+    border-radius: 50px;
+    color: var(--morado);
+    
+  }
+}
+
+
+.btn-actualizar::before:hover {
+  cursor: pointer;
+  animation: btn2 2s infinite ease;
+  top: 0;
+  left: 0;
+}
+
+@keyframes btn2{
+
+  0%{
+    top: -100;
+    left: -100;
+
+
+  }
+  100%{
+    top: 0;
+    left: 0;
+
+  }
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.contenedor-DatosUsuario{
+  
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 70%;
+  overflow: hidden;
+
+  margin: auto;
+  padding: 30px;
+
+  border-radius: 40px;
+
+  background-color: var(--azul-o);
+  border-right: 3px solid var(--rosa);
+  border-bottom: 3px solid var(--rosa);
+  box-shadow: 9px 9px 35px -8px rgba(0, 0, 0, 0.62);  
+
+}
+.ayuda-titulo-cuerpo{
+  width: 100%;
+}
+
+.ayuda-titulo-cuerpo h2{
+  
+  max-width: 50%;
+  min-width: 300px;
+
+  font-size: 33px;
+  color: var(--morado);
+
+  
+}
+.p-preguntas{
+  
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  margin: auto;
+
+  flex-direction: row-reverse;
+}
+
+
+.preguntas{
+  
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 100%;
+  overflow: hidden;
+
+  margin: auto;
+}
+
+.preguntas div{
+  
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 100%;
+  overflow: hidden;
+
+  margin: auto;
+  margin-top: 10px;
+}
+
+.preguntas div label{
+  
+  box-sizing: border-box;
+  position: relative;
+
+  width: 100%;
+  margin: auto;
+  margin-top: 15px;
+
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--morado);
+
+
+
+}
+
+
+.preguntas div input{
+  
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 80%;
+  height: 60px;
+  font-size: 18px;
+
+  border: 5px solid var(--morado);
+  overflow: hidden;
+
+  margin: auto;
+
+  
+  justify-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.preguntas div input:hover{
+
+  animation: btn 5s ease;
+  color: var(--morado);
+  border-color: var(--rosa);
+
+  font-weight: bold;
+  border-radius: 50px;
+  font-size:25px;
+}
+
+
+.preguntas div input:focus{
+  color: var(--rosa);
+  border-color: var(--rosa);
+  font-size:23px;
+
+
+}
+
+
+.btnFrom {
+  
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  overflow: hidden;
+
+  margin-top: 30px;
+}
+
+
+.btnFrom button {
+  justify-items: center;
+  justify-content: center;
+  text-align: center;
+  
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  overflow: hidden;
+
+  margin-top: 30px;
+
+  width: 250px;
+  height: 50px;
+
+  padding: 15px;
+
+  border: 3px solid var(--morado);
+
+  box-sizing: border-box;
+
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0);
+
+  font-size: 15px;
+
+
+}
+
+
+
+.btnFrom button:hover {
+  cursor: pointer;
+    border-radius: 50px;
+    color: var(--morado);
+    animation: btn 2s ease;
+}
+
+
+
+
+.contenedor-DatosTarjeta{
+
+  
+  box-sizing: border-box;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 80%;
+  overflow: hidden;
+
+  margin: 80px auto;
+  padding: 30px;
+
+  border-radius: 40px;
+
+  background-color: var(--azul);
+  border-right: 3px solid var(--rosa);
+  border-bottom: 3px solid var(--rosa);
+  box-shadow: 9px 9px 35px -8px rgba(0, 0, 0, 0.62);  
+
 }
