--- a/client/src/paginas/1home/home.css
+++ b/client/src/paginas/1home/home.css
@@ -20,8 +20,9 @@
   flex-direction: column;
 
   width: 100%;
+  overflow: scroll;
 
-  overflow: hidden;
+  
 }
 
 .encabezado-titulo {
@@ -55,6 +56,7 @@
 
 .encabezado-img img {
   width: 100%;
+  min-width: 400px;
   height: 100%;
   object-fit: cover;
   -webkit-filter: brightness(50%);
