--- a/client/src/paginas/3ayuda/ayuda.css
+++ b/client/src/paginas/3ayuda/ayuda.css
@@ -110,7 +110,11 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+
+
   margin: auto;
+
+  padding: 0;
 
 }
 
@@ -122,6 +126,7 @@
   position: relative;
 
   display: flex;
+  margin: auto;
   
   width: 33%;
   height: 100%;
@@ -288,8 +293,8 @@
   display: flex;
   flex-wrap: wrap;
 
-  width: 70%;
-  overflow: hidden;
+  width: 80%;
+  overflow: scroll;
 
   margin: auto;
   padding: 30px;
@@ -492,8 +497,9 @@
   display: flex;
   flex-wrap: wrap;
 
-  width: 80%;
-  overflow: hidden;
+  width: 80%;  
+  overflow: scroll;
+
 
   margin: 80px auto;
   padding: 30px;
