--- a/client/src/piepagina/piepagina.css
+++ b/client/src/piepagina/piepagina.css
@@ -33,10 +33,19 @@
 .piePagina-bottom{
     position: relative;
     display: flex;  
+    flex-wrap: wrap;
 
     width: 100%;
 
     margin: 50px auto;
+}
+
+.piePagina-bottom div{
+    border-left: 3px solid var(--rosa);
+    height: 60px;
+    min-width: 200px;
+    max-width: 30%;
+    margin: 10px auto;
 }
 
 
@@ -45,10 +54,10 @@
     position: relative;
     display: flex;  
 
-    width: 30%;
 }
 .equipo-name h2{
-    margin: auto 50px;
+
+    margin: auto;
     font-size: 30px;
 
     color: var(--morado);
